<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="typeMessage" Id="{221336c1-ab93-4c6c-ba86-6e53bedca566}">
    <Declaration><![CDATA[TYPE typeMessage :
STRUCT
	//defines a list of messages to display for each type of message
	message: ARRAY [0..GlobalMessages.gNumMessagesPerType] OF BOOL;
	text:ARRAY[0..GlobalMessages.gNumMessagesPerType] OF STRING(255);
END_STRUCT
END_TYPE

]]></Declaration>
  </DUT>
</TcPlcObject>