<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="typeStationMessage" Id="{522474e9-f403-49d0-b4c8-368ea15398b7}">
    <Declaration><![CDATA[TYPE typeStationMessage :
STRUCT
	
	//define message allowance for each station
	Alarm: typeMessage;
	Warning: typeMessage;
	Prompts: typeMessage;
	
	//starting location for warnings, on pass-thru from alarms listing start location
	passThruStart:INT;
	msgWasChanged:BOOL; //TRUE if messages were changed, requires refresh of list
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>